@@ -3,6 +3,8 @@ package org.embeddedt.embeddium.api;
 import net.minecraft.core.SectionPos;
 import net.minecraft.world.level.BlockAndTintGetter;
 import net.minecraft.world.level.Level;
+import org.embeddedt.embeddium.api.eventbus.EmbeddiumEvent;
+import org.embeddedt.embeddium.api.eventbus.EventHandlerRegistrar;
 import org.jetbrains.annotations.ApiStatus;
 
 import java.util.ArrayList;
@@ -22,7 +24,9 @@ import java.util.Objects;
  * event handler. Note that {@link MeshAppender#render(MeshAppender.Context)} will be called on a worker thread, and
  * therefore accessing the world is not safe inside the appender itself. Instead, use the provided {@link BlockAndTintGetter}.
  */
-public class ChunkMeshEvent {
+public class ChunkMeshEvent extends EmbeddiumEvent {
+    public static final EventHandlerRegistrar<ChunkMeshEvent> BUS = new EventHandlerRegistrar<>();
+
     private final Level world;
     private final SectionPos sectionOrigin;
     private List<MeshAppender> meshAppenders = null;
@@ -58,9 +62,7 @@ public class ChunkMeshEvent {
     @ApiStatus.Internal
     public static List<MeshAppender> post(Level world, SectionPos origin) {
         ChunkMeshEvent event = new ChunkMeshEvent(world, origin);
-        return List.of();
-        // TODO port
-        //MinecraftForge.EVENT_BUS.post(event);
-        //return Objects.requireNonNullElse(event.meshAppenders, Collections.emptyList());
+        BUS.post(event);
+        return Objects.requireNonNullElse(event.meshAppenders, Collections.emptyList());
     }
 }
